# AnnotationTransfer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.txt
Annotation/: CMakeLists.txt
Annotation/include/: annotation.h  annotationutilities.h  facet.h  nanoflannhelper.h  spthread.h
Annotation/src/: annotation.cpp  annotationutilities.cpp  facet.cpp  nanoflannhelper.cpp  spthread.cpp
ImatiSTLExtension/ImatiSTL/: CMakeLists.txt
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/: Makefile  config.h  config.status  libtool  mpir.h
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/.libs/: libmpir.so.23.0.3
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/cxx/: Makefile
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/doc/: Makefile
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/fft/: Makefile
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/mpf/: Makefile
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/mpn/: Makefile  addlsh_n.lo  rsh1add_n.lo  rsh1sub_n.lo
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/mpq/: Makefile
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/mpz/: Makefile
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/printf/: Makefile
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/scanf/: Makefile
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/: Makefile  libtests.la  t-bswap  t-constants  t-count_zeros  t-gmpmax  t-hightomask  t-modlinv  t-parity  t-popc  t-sub
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/.libs/: lt-t-bswap  lt-t-constants  lt-t-count_zeros  lt-t-gmpmax  lt-t-hightomask  lt-t-modlinv  lt-t-parity  lt-t-popc  lt-t-sub  t-bswap  t-constants  t-count_zeros  t-gmpmax  t-hightomask  t-modlinv  t-parity  t-popc  t-sub
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/cxx/: Makefile
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/devel/: Makefile
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/fft/: Makefile  t-adjust  t-adjust_sqrt2  t-butterfly  t-butterfly_lshB  t-butterfly_rshB  t-butterfly_sqrt2  t-butterfly_twiddle  t-div_2expmod_2expp1  t-fft_ifft_mfa_trunc_sqrt2  t-fft_ifft_negacyclic  t-fft_ifft_radix2  t-fft_ifft_trunc  t-fft_ifft_trunc_sqrt2  t-mul_2expmod_2expp1  t-mul_fft_main  t-mul_mfa_trunc_sqrt2  t-mul_trunc_sqrt2  t-mulmod_2expp1  t-normmod_2expp1  t-split_combine_bits
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/fft/.libs/: lt-t-adjust  lt-t-adjust_sqrt2  lt-t-butterfly  lt-t-butterfly_lshB  lt-t-butterfly_rshB  lt-t-butterfly_sqrt2  lt-t-butterfly_twiddle  lt-t-div_2expmod_2expp1  lt-t-fft_ifft_mfa_trunc_sqrt2  lt-t-fft_ifft_negacyclic  lt-t-fft_ifft_radix2  lt-t-fft_ifft_trunc  lt-t-fft_ifft_trunc_sqrt2  lt-t-mul_2expmod_2expp1  lt-t-mul_fft_main  lt-t-mul_mfa_trunc_sqrt2  lt-t-mul_trunc_sqrt2  lt-t-mulmod_2expp1  lt-t-normmod_2expp1  lt-t-split_combine_bits  t-adjust  t-adjust_sqrt2  t-butterfly  t-butterfly_lshB  t-butterfly_rshB  t-butterfly_sqrt2  t-butterfly_twiddle  t-div_2expmod_2expp1  t-fft_ifft_mfa_trunc_sqrt2  t-fft_ifft_negacyclic  t-fft_ifft_radix2  t-fft_ifft_trunc  t-fft_ifft_trunc_sqrt2  t-mul_2expmod_2expp1  t-mul_fft_main  t-mul_mfa_trunc_sqrt2  t-mul_trunc_sqrt2  t-mulmod_2expp1  t-normmod_2expp1  t-split_combine_bits
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/misc/: Makefile  t-locale  t-printf  t-scanf
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/misc/.libs/: lt-t-locale  lt-t-printf  lt-t-scanf  t-locale  t-printf  t-scanf
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/mpf/: Makefile  reuse  t-add  t-cmp_d  t-cmp_si  t-conv  t-div  t-dm2exp  t-eq  t-fits  t-get_d  t-get_d_2exp  t-get_si  t-get_ui  t-gsprec  t-inp_str  t-int_p  t-mul_ui  t-muldiv  t-set  t-set_q  t-set_si  t-set_ui  t-sqrt  t-sqrt_ui  t-sub  t-trunc  t-ui_div
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/mpf/.libs/: lt-reuse  lt-t-add  lt-t-cmp_d  lt-t-cmp_si  lt-t-conv  lt-t-div  lt-t-dm2exp  lt-t-eq  lt-t-fits  lt-t-get_d  lt-t-get_d_2exp  lt-t-get_si  lt-t-get_ui  lt-t-gsprec  lt-t-inp_str  lt-t-int_p  lt-t-mul_ui  lt-t-muldiv  lt-t-set  lt-t-set_q  lt-t-set_si  lt-t-set_ui  lt-t-sqrt  lt-t-sqrt_ui  lt-t-sub  lt-t-trunc  lt-t-ui_div  reuse  t-add  t-cmp_d  t-cmp_si  t-conv  t-div  t-dm2exp  t-eq  t-fits  t-get_d  t-get_d_2exp  t-get_si  t-get_ui  (+14 more)
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/mpn/: Makefile  st_fat  st_instrument  t-addadd_n  t-addsub_n  t-aors_1  t-asmtype  t-dc_bdiv_q  t-dc_bdiv_q_n  t-dc_bdiv_qr  t-dc_bdiv_qr_n  t-dc_div_q  t-dc_div_qr  t-dc_div_qr_n  t-dc_divappr_q  t-divebyff  t-divebyfobm1  t-divrem_1  t-fat  t-gcdext  t-get_d  t-hgcd  t-instrument  t-inv_div_q  t-inv_div_qr  t-inv_div_qr_n  t-inv_divappr_q  t-inv_divappr_q_n  t-invert  t-iord_u  t-lorrshift1  t-matrix22  t-mp_bases  t-mullow_basecase  t-mullowhigh  t-mulmid  t-mulmod_2expm1  t-mulmod_2expp1  t-neg  t-perfsqr  (+11 more)
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/mpn/.libs/: lt-t-addadd_n  lt-t-addsub_n  lt-t-aors_1  lt-t-asmtype  lt-t-dc_bdiv_q  lt-t-dc_bdiv_q_n  lt-t-dc_bdiv_qr  lt-t-dc_bdiv_qr_n  lt-t-dc_div_q  lt-t-dc_div_qr  lt-t-dc_div_qr_n  lt-t-dc_divappr_q  lt-t-divebyff  lt-t-divebyfobm1  lt-t-divrem_1  lt-t-fat  lt-t-gcdext  lt-t-get_d  lt-t-hgcd  lt-t-instrument  lt-t-inv_div_q  lt-t-inv_div_qr  lt-t-inv_div_qr_n  lt-t-inv_divappr_q  lt-t-inv_divappr_q_n  (+70 more)
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/mpq/: Makefile  t-aors  t-cmp  t-cmp_si  t-cmp_ui  t-cmp_z  t-equal  t-get_d  t-get_str  t-inp_str  t-md_2exp  t-set_f  t-set_str
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/mpz/: Makefile  bit  convert  dive  dive_ui  io  logic  reuse  st_hamdist  st_popcount  t-addsub  t-aorsmul  t-bin  t-cdiv_ui  t-cmp  t-cmp_d  t-cmp_si  t-cong  t-cong_2exp  t-div_2exp  t-divis  t-divis_2exp  t-export  t-fac_ui  t-fdiv  t-fdiv_ui  t-fib_ui  t-fits  t-gcd  t-gcd_ui  t-get_d  t-get_d_2exp  t-get_si  t-get_sx  t-get_ux  t-hamdist  t-import  t-inp_str  t-io_raw  t-jac  (+30 more)
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tests/rand/: Makefile  t-iset  t-lc2exp  t-mt  t-rand  t-urbui  t-urmui  t-urndmm
ImatiSTLExtension/ImatiSTL/mpir-3.0.0/tune/: Makefile
ImatiSTLExtension/ImatiSTL/src/Kernel/: tmesh.cpp
ImatiSTLExtension/ImatiSTL/src/TMesh/: io.cpp
(+178 files in other folders)
